apps/searxng/service-default-searxng.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
    environment: prod
  name: searxng
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: searxng
  sessionAffinity: None
  type: ClusterIP
