apps/searxng/ingress-default-searxng.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: searxng
    environment: prod
  name: searxng
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: searx.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: searxng
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - searx.brmartin.co.uk
    secretName: wildcard-brmartin-tls
